--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,3 +1,3 @@
 <% @patients.each do |patient| %>
-  Name - <%= patient.name %> Appointments - <%= patient.appointments.count %>
+  Name: <%= patient.name %> Number of Appointments: <%= patient.appointments.count %>
 <% end %>
