--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,3 +1,5 @@
-<% @patients.each do |patient| %>
-  Name: <%= patient.name %> Number of Appointments: <%= patient.appointments.count %>
-<% end %>
+<ul>
+  <% @patients.each do |patient| %>
+    <li>Name: <%= patient.name %> Number of Appointments: <%= patient.appointments.count %></li>
+  <% end %>
+</ul>
